name:                blueprint
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/bch29/blueprint#readme
license:             BSD3
license-file:        LICENSE
author:              Bradley Hardy
maintainer:          bch29@cam.ac.uk
copyright:           Bradley Hardy
category:            Other
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Blueprint
                     , Blueprint.Schema
                     , Blueprint.Records
                     , Blueprint.Records.Opaleye
                     , Blueprint.AsColumn
                     , Blueprint.Labels
                     , Blueprint.Lens
                     , Blueprint.Internal.Schema
                     , Blueprint.Internal.Vinyl
  build-depends:       base >= 4.7 && < 5
                     , vinyl >= 0.5 && < 1.0
                     , text
                     , bytestring
                     , containers
                     , uuid-types
                     , scientific
                     , time
                     , lens
                     , singletons
                     , opaleye
                     , case-insensitive >= 1.2
                     , profunctors >= 5.2
                     , product-profunctors >= 0.8
  ghc-options: -Wall
  default-language:    Haskell2010

test-suite blueprint-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , blueprint
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bch29/blueprint
